Fix #1195
Add the `--add-opens java.base/java.lang=ALL-UNNAMED` referenced in #1195 so the CLI version of ktlint can run